@@ -264,6 +264,22 @@ name|st
 operator|+
 name|fragCharSize
 decl_stmt|;
+if|if
+condition|(
+name|phraseInfo
+operator|.
+name|getEndOffset
+argument_list|()
+operator|>
+name|en
+condition|)
+name|en
+operator|=
+name|phraseInfo
+operator|.
+name|getEndOffset
+argument_list|()
+expr_stmt|;
 name|startOffset
 operator|=
 name|en
