@@ -130,6 +130,153 @@ name|expected
 parameter_list|)
 block|{     }
 block|}
+DECL|method|testSmallerFragSizeThanTermQuery
+specifier|public
+name|void
+name|testSmallerFragSizeThanTermQuery
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SimpleFragListBuilder
+name|sflb
+init|=
+operator|new
+name|SimpleFragListBuilder
+argument_list|()
+decl_stmt|;
+name|FieldFragList
+name|ffl
+init|=
+name|sflb
+operator|.
+name|createFieldFragList
+argument_list|(
+name|fpl
+argument_list|(
+literal|"abcdefghijklmnopqrs"
+argument_list|,
+literal|"abcdefghijklmnopqrs"
+argument_list|)
+argument_list|,
+name|SimpleFragListBuilder
+operator|.
+name|MIN_FRAG_CHAR_SIZE
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|ffl
+operator|.
+name|fragInfos
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"subInfos=(abcdefghijklmnopqrs((0,19)))/1.0(0,19)"
+argument_list|,
+name|ffl
+operator|.
+name|fragInfos
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testSmallerFragSizeThanPhraseQuery
+specifier|public
+name|void
+name|testSmallerFragSizeThanPhraseQuery
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|SimpleFragListBuilder
+name|sflb
+init|=
+operator|new
+name|SimpleFragListBuilder
+argument_list|()
+decl_stmt|;
+name|FieldFragList
+name|ffl
+init|=
+name|sflb
+operator|.
+name|createFieldFragList
+argument_list|(
+name|fpl
+argument_list|(
+literal|"\"abcdefgh jklmnopqrs\""
+argument_list|,
+literal|"abcdefgh   jklmnopqrs"
+argument_list|)
+argument_list|,
+name|SimpleFragListBuilder
+operator|.
+name|MIN_FRAG_CHAR_SIZE
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|ffl
+operator|.
+name|fragInfos
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+name|ffl
+operator|.
+name|fragInfos
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"subInfos=(abcdefghjklmnopqrs((0,21)))/1.0(0,21)"
+argument_list|,
+name|ffl
+operator|.
+name|fragInfos
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|test1TermIndex
 specifier|public
 name|void
